<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTintMode="add"
    android:fadeScrollbars="true"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkmode">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="386dp"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:background="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <TextView
                    android:id="@+id/header_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/header"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_foreground" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/btn_signUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ToS_checker" />

            <ImageView
                android:id="@+id/img_sideLogo"
                android:layout_width="392dp"
                android:layout_height="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/teal_700"
                android:clickable="false"
                android:contentDescription="Icon"
                app:layout_constraintBottom_toTopOf="@+id/info_web1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password"
                app:srcCompat="@drawable/cheeseburger" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/ToU"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/ToS_checker"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="83dp"
                android:height="30dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_website"
                android:layout_width="207dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="343dp"
                android:height="30dp"
                android:autofillHints="@string/hint_web"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_web"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_address"
                android:layout_width="293dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="469dp"
                android:height="30dp"
                android:autofillHints="@string/hint_address"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_address"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_web2"
                android:layout_width="207dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:hint="@string/info_address"
                android:text="@string/info_address"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/input_address"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="206dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:height="30dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <CheckBox
                android:id="@+id/ToS_checker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="603dp"
                android:text="@string/rbtn_ToU"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_web1"
                android:layout_width="207dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:hint="@string/info_web"
                android:text="@string/info_web"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/input_website"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>